# patchwork13

./: AUTHORS  LICENSE  Makefile.am  README  THANKS  bootstrap  config.h.in  configure.in  pw13-makefile-am
cluster/: AUTHORS  Makefile.am  Makefile.super  bootstrap  configure.in  libpw13_cluster_c-0.pc.in
cluster/client/: Makefile.am  broadcast.c  broadcast.h  client.h  client_message_server.c  client_message_server.h  client_message_server_dupli.c  client_message_server_dupli.h  client_message_server_scat.c  client_message_server_scat.h  iplist.c  iplist.h  libpw13_cluster_c-0.def  main.c  main_example_soutenance3.c  pw13_server.c  pw13_server.h  servlist.c  servlist.h  tcp.c  tcp.h
cluster/common/: Makefile.am  broadcast.h  data_transfer.c  data_transfer.h  nieme_str.c  nieme_str.h  transmit.c  transmit.h  type_message.h  win32.h
cluster/server/: Makefile.am  broadcast.c  broadcast.h  client.server.c  client_of_server.c  client_of_server.h  client_of_server_common.c  client_of_server_common.h  main.c  output_server.c  output_server.h  perf.c  perf.h  protocole_server.c  server.c  server.h  signals.c  signals.h  struct_server.h  tcp.c  tcp.h
debian/: changelog  control  copyright  patchwork13-0.docs  pw13-0.docs  pw13_gtk.xml  rules
doc/epita/: Makefile
doc/epita/cahier_des_charges/: Makefile  chc_patchwork13.tex
doc/epita/rapport_soutenance_1/: Makefile  pw13_plan_de_soutenance1.tex  pw13_rapport_soutenance1.tex
doc/epita/rapport_soutenance_2/: Makefile  affichage.tex  audio.tex  cluster_soutenance2.tex  conclusion.tex  drag_and_drop.tex  glisserdeposer.tex  interface_graphique.tex  introduction.tex  libsdl.tex  libstandard.tex  noyau.tex  opengl.tex  pw13_rapport_soutenance_2.tex  vect4f.tex
doc/epita/rapport_soutenance_3/: Makefile  cluster.tex  conclusion.tex  interface.tex  introduction.tex  methodes.tex  opengl.tex  pw13_plan_de_soutenance_3.tex  pw13_rapport_soutenance_3.tex  son.tex  xml.tex
doc/epita/rapport_soutenance_finale/: cluster.tex  conclusion.tex  gui.tex  introduction.tex  noyau.tex  opengl.tex  pw13_plan_de_soutenance_finale.tex  pw13_rapport_soutenance_finale.tex
doc/examples/: delaaay.pw13  opengl.pw13  osc.pw13  replay.pw13  scratched.pw13  stk-rtaudio.pw13.xml  synthe.pw13
doc/patchwork13/: Makefile  bookinfo.sgml  glossary.sgml  gui.sgml  index.sgml  install.sgml  installing.sgml  intro.sgml
doc/www/: .htaccess
doc/www/htdocs/: .menu  after_menu.inc.php  index.php  main.css
doc/www/htdocs/admin/: .htaccess  .menu  after_menu.inc.php  generate-news  index.php  main.css  phpinfo.php
doc/www/htdocs/news/: 01.html
doc/www/htdocs/pages/: about2.inc.php  authors.inc.php  dl.inc.php  doc.inc.php  intro.inc.php  links.inc.php  news.inc.php  news1.inc.php  newsarchive1.inc.php  roadmap.inc.php  stk.inc.php  tutorial.inc.php
gtk/: AUTHORS  BUGS  Makefile.am  Makefile.super  NEWS  ROADMAP  configure.in  pw13_toolbox.gladep  update-libs
gtk/const/: bool.pw13p.c  float.pw13p.c  int.pw13p.c  xy.pw13p.c
gtk/data/: Makefile.am  pw13-gtk.desktop  pw13_cluster_servers.glade  pw13_patch.glade  pw13_patchwork.glade  pw13_pw_close.glade  pw13_quit.glade  pw13_tb_cluster_pref.glade  pw13_toolbox.glade
gtk/displays/: oscilloscope.pw13p.c
gtk/src/: Makefile.am  about.c  about.h  cluster_servers.c  cluster_servers.h  connect.c  connect.h  drag_and_drop.h  icons.c  icons.h  input.c  input.h  main.c  output.c  output.h  patch.c  patch.h  patchwork.c  patchwork.h  paths.c  paths.h  play.c  play.h  pw_close.c  pw_close.h  pw_draw.c  pw_draw.h  quit.c  quit.h  tb_cluster_pref.c  tb_cluster_pref.h  tb_tree.c  tb_tree.h  toolbox.c  toolbox.h  types.h  xml.c  xml.h  xml_signals.h
gtk/time/: replay.pw13p.c  scratch.pw13p.c
pw13/: Makefile.am  any.h  classpath.c  classpath.h  data.c  data.h  data_type.c  data_type.h  dl.c  dl.h  dll.h  error.c  error.h  export.c  export.h  import.c  import.h  input.c  input.h  libpw13-0.def  libpw13-0.pc.in  library_path.c  library_path.h  list.c  list.h  master_patch.c  master_patch.h  method.c  method.h  names.c  names.h  output.c  output.h  patch.c  patch.h  patch_class.c  patch_class.h  patchwork.c  patchwork.h  pw13.h  (+9 more)
sdl/: Makefile.am  update-libs
sdl/gl/: bezier.pw13p.c  clearbuffer.pw13p.c  color.pw13p.c  example1.pw13p.c  light.pw13p.c  quad.pw13p.c  resetview.pw13p.c  rotate.pw13p.c  rotate_yxz.pw13p.c  sdl_init.pw13p.c  surface.pw13p.c  texture.pw13p.c  translate.pw13p.c  triangle.pw13p.c  va.pw13dt.h  va_cube.pw13p.c  va_drawarray.pw13p.c  va_size.pw13p.c  vbo_cube.pw13p.c
sdl/mixer/: sound_out.pw13p.c
snd/: Makefile.am  note.pw13dt.h  update-libs
snd/env/: adsr.pw13p.c
snd/freq/: of_note.pw13p.c  of_samples.pw13p.c
snd/fx/: delay.pw13p.c  saturation.pw13p.c
snd/note/: transpose.pw13p.c
snd/signals/: sinus.pw13p.c  square.pw13p.c  triangular.pw13p.c
snd/synth/: basical-synth.pw13p.c
std/: Makefile.am  bool.pw13dt.h  float.pw13dt.h  int.pw13dt.h  libpw13_std-0.pc.in  short.pw13dt.h  stream.pw13dt.h  text.pw13dt.h  update-libs  vect4f.pw13dt.h
std/array/: of_3_data.pw13p.c
std/bool/: and.pw13p.c  ifequal.pw13p.c  ifsup.pw13p.c  not.pw13p.c  or.pw13p.c  print.pw13p.c  xor.pw13p.c
std/float/: add.pw13p.c  const.pw13p.c  float.pw13dt.la  multiplicate.pw13p.c  osc.pw13p.c  print.pw13p.c  sin.pw13p.c  sub.pw13p.c
std/int/: add.pw13p.c  and.pw13p.c  div.pw13p.c  fact.pw13p.c  max.pw13p.c  or.pw13p.c  powa.pw13p.c  print.pw13p.c  random.pw13p.c  sub.pw13p.c  xor.pw13p.c
std/short/: add.pw13p.c  div.pw13p.c  max.pw13p.c  of_float.pw13p.c  print.pw13p.c  sub.pw13p.c
std/stream/: file-open.pw13p.c  pipe-in.pw13p.c  pipe-out.pw13p.c  stderr.pw13p.c  stdin.pw13p.c  stdout.pw13p.c
std/text/: cat.pw13p.c
std/time/: augend.pw13p.c  of_float.pw13p.c  real_time.pw13p.c  sync.pw13p.c  system_time.pw13p.c
std/vect4f/: add.pw13p.c  const.pw13p.c  sub.pw13p.c
std/void/: of_2_void.pw13p.c
stk/: Makefile.am  Makefile.super  bootstrap  configure.in  update-libs
stk/rtaudio/: float_out.pw13p.cc
win32_installer/: License.txt  Makefile  find_pw13_libs  patchwork13.nsi
(+83 files in other folders)
