AUTOMAKE_OPTIONS = gnu

PW13_LIBS = array bool float int short stream text time vect4f void

pw13_stddir = $(includedir)/pw13-0/std
pw13_std_HEADERS =		\
	bool.pw13dt.h		\
	float.pw13dt.h		\
	int.pw13dt.h		\
	short.pw13dt.h		\
	stream.pw13dt.h		\
	text.pw13dt.h		\
	vect4f.pw13dt.h

SUBDIRS = $(PW13_LIBS)
